# BuddyImagine

./: .dockerignore  .env.example  .gitignore  .vercel-trigger  Dockerfile  README.md  agent.py  bot.py  check_model.py  docker-compose.yml  handlers.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  set_webhook.py  vercel.json
.github/workflows/: ci.yml
api/: index.py
archive/: check_gateway.py  check_pricing.py
convex/: creditLogs.ts  messages.ts  payments.ts  schema.ts  users.ts
imagine/: agent.py  handlers.py  handlers_payments.py  main.py  models.py
imagine/middleware/: __init__.py  rate_limit.py
imagine/services/: convex.py  fal.py  r2.py
services/: convex.py  fal.py  r2.py
tests/: conftest.py  test_agent.py  test_agent_tools.py  test_convex_integration.py  test_convex_service.py  test_fal_service.py  test_generation.py  test_models.py  test_nano_banana.py  test_payments.py  test_r2_service.py  test_rate_limit.py  test_services.py
